--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,21 @@
 [profile.default]
-src = "src"
-out = "out"
 libs = ["lib"]
+out = "out"
+solc_version = "0.8.24"
+src = "src"
+via_ir = true
 
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+[rpc_endpoints]
+fuji = "${FUJI_RPC_URL}"
+goerli = "${GOERLI_RPC_URL}"
+mainnet = "${MAINNET_RPC_URL}"
+mumbai = "${MUMBAI_RPC_URL}"
+polygon = "${POLYGON_RPC_URL}"
+sepolia = "${SEPOLIA_RPC_URL}"
+
+[etherscan]
+etherscan = {key = "${ETHERSCAN_API_KEY}"}
+
+[fmt]
+line_length = 100
+number_underscore = "thousands"
